refactor(Mixe): Use RecipeInput instead of FluidIngredient